<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditInstructorActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="28sp"
        android:text="@string/editInstructor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/instructorNameEditText"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:textSize="20sp"
        android:hint="@string/instructorName"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView4"
        android:autofillHints="" />

    <EditText
        android:id="@+id/instructorPhoneEditText"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:textSize="20sp"
        android:hint="@string/instructorPhone"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instructorNameEditText"
        android:autofillHints="" />

    <EditText
        android:id="@+id/instructorEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:textSize="20sp"
        android:hint="@string/instructorEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instructorPhoneEditText"
        android:autofillHints="" />

    <Button
        android:id="@+id/saveInstructorButton"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        app:layout_constraintTop_toBottomOf="@id/instructorEmailEditText"
        android:layout_margin="50sp"
        android:text="@string/save"
        android:background="@color/primaryBlue"
        android:textColor="@color/white"
        android:textSize="20sp" />
</androidx.constraintlayout.widget.ConstraintLayout>
